add CardBox and TextField shared components

--- a/.eslintrc
+++ b/.eslintrc
@@ -47,7 +47,10 @@
     "no-confusing-arrow": "off",
     "indent": ["error", 2],
     "class-methods-use-this": "off",
+    "max-classes-per-file": "off",
     "no-restricted-globals": ["error", "event", "fdescribe"],
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-useless-constructor": "off",
     "no-alert": "off",
     "no-new": "off",
     "import/prefer-default-export": "off",
